apps/homepage/frontend/src/app/components/game-tiles/game-tiles.component.scss
:host {
    display: flex;
    flex-direction: column;
    gap: 20px;
}

.game-tile {
    display: flex;
    flex-direction: column;
    width: 100%;background-color: var(--part-background-light);
    color: var(--on-background);
    padding: 20px;
    gap: 10px;
    border: 5px solid var(--part-background-light);
}

.game-date-description {
    display: flex; 
    justify-content: space-between;
    height: 40px;
    align-items: center;
    gap: 5px;
}


.game-title {
    align-self: center;
    font-weight: bold;
    font-size: 1.3rem;
}

.line {
    width: 100%;
    border: 1px solid var(--dark-blue);
    margin: 2px 0;
}

.game-date {
    font-weight: bold;
}

.game-location {
    display: flex;
    align-items: center;
    height: 40px;
}

.home-logo {
    display: none;
}

.location-home {
    border-color: darkred;
    background-color: var(--background);
    
    .game-location {
        gap: 10px;

        .home-logo {
            display: inline-block;
            height: 40px;
            object-fit: contain;
        }

        .game-location-text {
            font-weight: bold;
        }
    }
}

@media only screen and (max-width: 600px) {
    .game-tile {
        gap: 5px;
        padding: 10px;
    }

    .game-title {
        font-size: 1rem;
    }
}

